# mailgun-rust-sdk

./: .gitignore  Cargo.toml  README.md
src/: client.rs  lib.rs  param.rs
src/endpoints/: get_bounces.rs  get_complaints.rs  get_events.rs  get_stats.rs  get_unsubscribes.rs  get_whitelists.rs  mod.rs  send_message.rs
